# sivi

./: .dockerignore  .gitignore  DEPLOY.md  PREREQUISITES.md  README.md
backend/: .gitignore  Dockerfile  README.md  conftest.py  entrypoint.sh  env.example  pyproject.toml  requirements.txt
backend/scripts/: analyze_channels.py  generate_session.py
backend/src/apps/analytics/: exchange.py  models.py  permissions.py  urls.py  views.py
backend/src/apps/analytics/migrations/: 0001_initial.py  0002_userevent.py
backend/src/apps/common/: __init__.py  apps.py  authentication.py  constants.py  exceptions.py  pagination.py  permissions.py  regions.py  responses.py  schema.py
backend/src/apps/matching/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/src/apps/matching/migrations/: 0001_enable_pgvector.py  0002_vacancyimpression.py
backend/src/apps/matching/services/: embedding.py  matcher.py
backend/src/apps/promocodes/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/apps/promocodes/migrations/: 0001_initial.py  0002_rename_promocodes_code_idx_promocodes_code_df9561_idx_and_more.py  __init__.py
backend/src/apps/questions/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/questions/management/: questions_data.py
backend/src/apps/questions/migrations/: 0001_initial.py  0002_rename_language_uz2_to_cyr.py
backend/src/apps/questions/tests/: __init__.py  test_models.py
backend/src/apps/referrals/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/referrals/migrations/: 0001_initial.py  0002_rename_referral_s_referr_idx_referral_si_referra_fe48f0_idx_and_more.py  __init__.py
backend/src/apps/resumes/: __init__.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/resumes/migrations/: 0001_initial.py  0002_rename_currently_resumeeducation_current_and_more.py  0003_resume_language.py  0004_remove_resume_content_type_remove_resume_file_and_more.py  0005_rename_skill_tags_resumeexperience_skills_used_and_more.py  0006_resume_language.py  0007_remove_resume_status_resume_origin.py  0008_resume_profile_image_alter_resume_origin.py  0009_remove_resume_resumes_user_id_4e9b43_idx_and_more.py  0010_add_resume_embedding.py  (+1 more)
backend/src/apps/store/: models.py  services.py
backend/src/apps/subscriptions/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/apps/users/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/vacancies/: __init__.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/src/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/src/config/settings/: base.py  dev.py  prod.py
backend/static_data/: regions.json
backend/tests/: test_integration.py  test_matching.py
telegram-bot/: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
telegram-bot/src/: __init__.py  config.py  main.py
telegram-bot/src/api/: __init__.py  dependencies.py
telegram-bot/src/api/v1/: __init__.py  routes.py
telegram-bot/src/handlers/: __init__.py  career_tips.py  commands.py  feedback.py  filters.py  interview_practice.py  job_search.py  language.py  main_menu.py  regions.py  subscription.py  unknown.py  user_ops.py
telegram-bot/src/handlers/helpers/: __init__.py  formatting.py  message.py  navigation.py  vacancy.py
telegram-bot/src/handlers/resume/: __init__.py  credits.py  helpers.py  states.py  upload.py  view.py
telegram-bot/src/keyboards/: inline.py  reply.py
telegram-bot/src/middlewares/: __init__.py  language.py  logging.py  services.py  throttling.py
telegram-bot/src/services/: __init__.py  cache.py  container.py  resume_service.py  states.py  subscription_service.py  user_service.py
telegram-bot/src/services/backend/: __init__.py  base.py  credit.py  event.py  matching.py  pdf.py  question.py  resume.py  subscription.py  user.py  vacancy.py
telegram-bot/src/utils/: callback_factories.py  deps.py  i18n.py  regions.py  validators.py
(+146 files in other folders)
