[project]
name = "sivi-telegram-bot"
version = "1.0.0"
description = "Sivi AI Career Agent — Telegram Bot"
requires-python = ">=3.12"

dependencies = [
    "aiogram>=3.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF012",
]
